--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./inventory/hosts
-remote_user = ansible_user
-private_key_file = ~/.ssh/id_rsa
+remote_user = ansible
+private_key_file = home/ansible/.ssh/id_rsa
 host_key_checking = False
 retry_files_enabled = False
 log_path = ./ansible.log
