--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./inventory/hosts
-private_key_file = home/ansible/.ssh/id_rsa
+private_key_file = /home/ansible/.ssh/id_rsa  # ต้องเพิ่มเครื่องหมาย / ต้นทางจาก root directory
 host_key_checking = False
 retry_files_enabled = False
 log_path = ./ansible.log
