--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory/hosts
+inventory = ./inventory/hosts.ini
 remote_user = ansible
 private_key_file = /home/ansible/.ssh/id_rsa  # ต้องเพิ่มเครื่องหมาย / ต้นทางจาก root directory
 host_key_checking = False
