--- a/nginx_install/playbooks/checkConnect.yml
+++ b/nginx_install/playbooks/checkConnect.yml
@@ -2,3 +2,5 @@
   tasks:
     - name: Check connectivity to webservers
       ping:
+    - name: Check connectivity and run a command
+      command: /bin/echo "Hello, World!"
