--- a/Dockerfile.target
+++ b/Dockerfile.target
@@ -1,4 +1,4 @@
-# Dockerfile for Target Nodes with public key authentication
+# Dockerfile for Target Nodes with public key authentication and ansible user
 FROM ubuntu:20.04
 
 # Copy public key for SSH authentication
@@ -15,7 +15,14 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Add ansible user
+RUN useradd -m -d /home/ansible -s /bin/bash ansible \
+    && echo 'ansible:password' | chpasswd \
+    && usermod -aG sudo ansible
+
+# Set working directory
+WORKDIR /home/ansible
+
 EXPOSE 22
 
 CMD ["/usr/sbin/sshd", "-D"]
-
