--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -4,4 +4,8 @@ remote_user = ansible
 private_key_file = /home/ansible/.ssh/id_rsa
 host_key_checking = False
 
-
+[privilege_escalation]
+become = True
+become_method = sudo
+become_user = root
+become_ask_pass = False
