--- a/nginx_install/playbooks/install_nginx.yml
+++ b/nginx_install/playbooks/install_nginx.yml
@@ -1,14 +1,16 @@
-- hosts: webservers
+- hosts: nginxservers
   become: yes
   tasks:
-    tasks:
+
     - name: update
       apt: update_cache=yes
+
     - name: Install Nginx
       apt: name=nginx state=latest
+
       notify:
         - restart nginx
+
   handlers:
     - name: restart nginx
-      service: name=nginx state=restarted
-      
+      service: name=nginx state=reloaded
