--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = hosts
-remote_user = ansible
+remote_user = root
 private_key_file = /home/ansible/.ssh/id_rsa
 host_key_checking = False
 
