--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = hosts
 remote_user = root
-private_key_file = /home/ansible/.ssh/id_rsa
+private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
 
 [privilege_escalation]
