--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -8,5 +8,5 @@ host_key_checking = False
 become = True
 become_method = sudo
 become_user = root
-become_password = password
+become_password = 1234
 become_ask_pass = False #คำสั่งนี้เป็นการปิดการถามรหัสผ่านเมื่อเราใช้คำสั่ง sudo ในการเข้าถึงเครื่องอื่นๆ
