--- a/nginx_install/ansible.cfg
+++ b/nginx_install/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = hosts
-remote_user = root
+remote_user = jenkins
 private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
 
@@ -8,5 +8,4 @@ host_key_checking = False
 become = True
 become_method = sudo
 become_user = root
-become_password = 1234
 become_ask_pass = False #คำสั่งนี้เป็นการปิดการถามรหัสผ่านเมื่อเราใช้คำสั่ง sudo ในการเข้าถึงเครื่องอื่นๆ
